# Decompositions

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate_script.py
include/decompositions/: DistanceGeneralizedCoreDecomposition.hpp  EdgeSupportCentrality.hpp  KPeakDecomposition.hpp  NeighborCoreness.hpp  TrussDecomposition.hpp  hDegreeCentrality.hpp
src/: DistanceGeneralizedCoreDecomposition.cpp  EdgeSupportCentrality.cpp  KPeakDecomposition.cpp  NeighborCoreness.cpp  TrussDecomposition.cpp  hDegreeCentrality.cpp  main.cpp  utility.hpp
